--- a/content/news.html
+++ b/content/news.html
@@ -6,7 +6,7 @@ layout: page
 <h1>{{title}}</h1>
 <nav>
 <ul>
-{%- for post in collections.post -%}
+{%- for post in collections.post reversed -%}
 	<li><a href='{{post.url}}'>{{ post.data.title }}</a></li>
 {%- endfor -%}
 </ul>
