menu demo: improved

--- a/content/demo/menu.html
+++ b/content/demo/menu.html
@@ -104,6 +104,8 @@ Never slide the page around, as that would be disorienting. The menu could slide
 <p>
 Theory is all well and good, but how do you get started? As always, we start with HTML, and add CSS for layout. This demo will not require JavaScript, and I recommend sticking with CSS to avoid pitfalls.
 <p>
-These styles create a top menu button that opens a scrolling vertical list of links. You may set the width to `100%` if you like. Make sure to pad the right side of the `<ul>` or the `<a>` by at least 16px for the scrollbar.
+`details` and `summary` provide the basic collapsing feature desired. Only the summary will be displayed at first. Upon clicking a summary, the parent element will enter its open state, as if you'd written `details open`, and all contents will be shown.
 <p>
-CSS markers are limited to text, so we replace it with a larger `::before` pseudo-element that turns green when the menu is open. I've adjusted the padding-left to line up the text with the larger marker.
+These nested styles lay out a top menu button that opens a scrolling vertical list of links. You may set the width to `100%` if you like. Make sure to pad the right side of the `ul` or the `a` by at least 16px for the scrollbar.
+<p>
+CSS markers are limited to text, so we replace it with a more graphical `::before` pseudo-element that turns green when the menu is open. I've adjusted the padding-left to line up the text.
