menu demo mobile fix?

--- a/content/demo/menu.html
+++ b/content/demo/menu.html
@@ -9,6 +9,7 @@ Demo for Navigation Menu
   * { box-sizing: border-box; }
   body { margin: 0; }
   h1, p { margin: 1rem; }
+  p { max-width: 50em; }
   .demo-menu {
     --height: 2em;
     --padding: .5em;
@@ -94,9 +95,11 @@ Demo for Navigation Menu
 
 <h1>Menu for HTML with CSS</h1>
 <p>
+Note: Right click "View Page Source" (Ctrl-U) to copy the working code from this demo so that it is guaranteed to be accurate.
+<p>
 How can we have a reasonable menu for a website that will work well on small and large screens alike? It should have some way of expanding so that is stays out of the way when we're focusing on the current page. If you are unsure, just have a link back to the home page and all navigation can be there in sitemap form.
 <p>
-There's nothing quite like a vertically scrolling list. If you've ever had the pleasure to use the [Application Finder in Xfce](https://docs.xfce.org/xfce/xfce4-appfinder/start), you may share my disdain for various fly-out menus of the past or the grids of the future.
+There's nothing quite like a vertically scrolling list. If you've ever had the pleasure to use the <a href='https://docs.xfce.org/xfce/xfce4-appfinder/start'>Application Finder in Xfce</a>, you may share my disdain for various fly-out menus of the past or the grids of the future.
 <p>
 I recommend starting with alphabetical order. This will create a dictionary-like search paradigm until you feel the need to add filtering.
 <p>
