--- a/public/demo/cannon.html
+++ b/public/demo/cannon.html
@@ -2,9 +2,7 @@
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <meta name='theme-color' content='#000000'>
-<title>
-Cannon
-</title>
+<title>Cannon</title>
 <style>
 body {
 	background: #000;
@@ -24,14 +22,6 @@ body {
 	image-rendering: pixelated;
 	image-rendering: -moz-crisp-edges;
 	image-rendering: crisp-edges;
-}
-#instructions {
-	position: absolute;
-	top: 10px;
-	left: 10px;
-	color: white;
-	font-size: 12px;
-	text-shadow: 1px 1px 0px #000;
 }
 </style>
 <div id="gameContainer">
